bug: keeps side margin to prevent overlapping

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -145,8 +145,8 @@
     margin-bottom: 0px;
     padding-bottom: 0px;
     .widget-container {
-      margin: 0px;
-      padding: 0px;
+      margin-bottom: 0px;
+      padding-bottom: 0px;
     }
   }
 
